--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="shortcut icon" href="./assets/icono.png" type="image/x-icon">
  <link rel="stylesheet" href="./CSS/styles.css">
  <title>Clon de google</title>
 </head>
@@ -38,7 +39,6 @@
    <input class="input-hover" type="text">
 
     <a class="micro-icon" href="#"></a>
-    <a class="micro-icon" href="#"></a>
 
   </div>
 
@@ -60,6 +60,20 @@
  </section>
 
 </main>
+
+<footer>
+  <ul class="footer-left">
+    <li><a href="#">Sobre Google</a></li>
+    <li><a href="#">Publicidad</a></li>
+    <li><a href="#">Negocios</a></li>
+    <li><a href="#">Como funciona</a></li>
+  </ul>
+  <ul class="footer-right">
+    <li><a href="#">Privacidad</a></li>
+    <li><a href="#">Condiciones</a></li>
+    <li><a href="#">Configuracion</a></li>
+  </ul>
+</footer>
 
 </body>
 </html>
