--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="shortcut icon" href="./assets/icono.png" type="image/x-icon">
- <link rel="stylesheet" href="./CSS/styles.css">
+ <link rel="stylesheet" href="./styles.css">
  <title>Clon de google</title>
 </head>
 <body>
